# project_monte_carlo

./: .gitignore  CHANGELOG.md  READ.me  README.md  ROADMAP.md  [build-system].txt  demo.ipynb  environment.yml  next steps.md  pyproject.toml
.github/workflows/: test.yml
foundations/: 01_Introduction_Black_Scholes_Options.ipynb  02_Black_Scholes_Assumptions.ipynb  03_Geometric_Brownian_Motion.ipynb  04_Black_Scholes_Formula.ipynb  05_Monte_Carlo_Pricing_European_Option.ipynb  05_Monte_Carlo_Pricing_European_Option_old.ipynb  STATISTICS_FOUNDATIONS.md
notebooks/: demo.ipynb  demo_notebooks.ipynb  generate_research_demo.py  research_demo.ipynb
src/option_pricing/: __init__.py  black_scholes.py  experiments.py  monte_carlo.py  utils.py
src/option_pricing/option_pricing/: __init__.py  experiments.py  utils.py
tests/: test_pricing.py
