[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monte-carlo-option-pricing"
version = "0.2.0"
description = "Monte Carlo methods for derivative pricing and variance reduction — a quantitative research study"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = [
    "tests"
]
[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
