[tool.poetry]
name = "monte-carlo-option-pricing"
version = "0.3.0"
description = "Monte Carlo methods for derivative pricing and variance reduction — a quantitative research study"
readme = "README.md"

packages = [
    { include = "option_pricing", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "*"
scipy = "*"
matplotlib = "*"
pandas = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"
pytest-cov = "*"
jupyter = "*"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"